--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "loadash": "^1.0.0",
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0"
   }
 }
